@@ -21,14 +21,19 @@
 
 package org.haedus.datatypes.phonetic;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.haedus.datatypes.Table;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.File;
+import java.io.IOException;
+import java.text.Normalizer;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -40,32 +45,145 @@ public class FeatureModel {
 
 	private static final transient Logger LOGGER = LoggerFactory.getLogger(FeatureModel.class);
 
-	private final Map<String, List<Float>> featureMap;
-	private final Table<Float>             weightTable;
+	private final Map<String, Integer>  featureNames;
+	private final Map<String, Integer>  featureAliases;
+	private final Table<Double> weightTable;
+
+	private final Map<String, List<Double>> featureMap;
+	private final Map<String, List<Double>> diacritics;
 
 	/**
 	 * Initializes an empty model
 	 */
 	public FeatureModel() {
-		featureMap  = new HashMap<String, List<Float>>();
-		weightTable = new Table<Float>();
+		featureNames   = new HashMap<String, Integer>();
+		featureAliases = new HashMap<String, Integer>();
+		weightTable    = new Table<Double>();
+		featureMap     = new LinkedHashMap<String, List<Double>>();
+		diacritics     = new LinkedHashMap<String, List<Double>>();
 	}
 
-	public FeatureModel(Map<String, List<Float>> map, Table<Float> weights) {
-		featureMap  = map;
-		weightTable = weights;
+	public FeatureModel(File file) {
+		this();
+		try {
+			readTable(FileUtils.readLines(file));
+		} catch (IOException e) {
+			LOGGER.error("Failed to read from file {}", file, e);
+		}
+	}
+
+	public String getBestSymbol(List<Double> featureArray) {
+
+		List<Double> bestFeatures = new ArrayList<Double>();
+		String bestSymbol = "";
+		double minimum = Double.MAX_VALUE;
+
+		for (Map.Entry<String, List<Double>> entry : featureMap.entrySet()) {
+			List<Double> features = entry.getValue();
+
+			double difference = getDifferenceValue(featureArray, features);
+			if (difference < minimum) {
+				bestSymbol   = entry.getKey();
+				minimum      = difference;
+				bestFeatures = features;
+			}
+		}
+
+		String bestDiacritic = "";
+		if (minimum > 0.0) {
+			bestDiacritic = getBestDiacritic(featureArray, bestFeatures);
+		}
+
+		return Normalizer.normalize(bestSymbol+bestDiacritic, Normalizer.Form.NFC);
+	}
+
+	private String getBestDiacritic(List<Double> featureArray, List<Double> bestFeatures, double lastMinimum) {
+		String bestDiacritic = "";
+		double minimumDifference = lastMinimum;
+		List<Double> bestCompiled = new ArrayList<Double>();
+
+		for (Map.Entry<String, List<Double>> entry : diacritics.entrySet()) {
+			List<Double> diacriticFeatures = entry.getValue();
+			List<Double> compiledFeatures = new ArrayList<Double>();
+			if (diacriticFeatures.size() == bestFeatures.size()) {
+				for (int i = 0; i < diacriticFeatures.size(); i++) {
+					Double left = diacriticFeatures.get(i);
+					Double right = bestFeatures.get(i);
+
+					if (left.isNaN()) {
+						compiledFeatures.add(right);
+					} else {
+						compiledFeatures.add(left);
+					}
+				}
+			} else {
+				LOGGER.error("Difference in array sizes: {} vs  {}", diacriticFeatures, bestFeatures);
+			}
+
+			if (!compiledFeatures.equals(bestFeatures)) {
+				double difference = getDifferenceValue(compiledFeatures, featureArray);
+				if (difference < minimumDifference) {
+					minimumDifference = difference;
+					bestDiacritic = entry.getKey();
+					bestCompiled = compiledFeatures;
+
+				} else if (difference == minimumDifference) {
+					// Modify this to use sets
+				}
+			}
+		}
+		if (minimumDifference > 0 && minimumDifference != lastMinimum) {
+			return bestDiacritic + getBestDiacritic(featureArray, bestCompiled, minimumDifference);
+		}
+		else {
+			return bestDiacritic;
+		}
+	}
+
+	private String getBestDiacritic(List<Double> featureArray, List<Double> bestFeatures) {
+		return getBestDiacritic(featureArray, bestFeatures, Double.MAX_VALUE);
+	}
+
+	private List<Double> getDifferenceArray(List<Double> left, List<Double> right) {
+		List<Double> list = new ArrayList<Double>();
+		if (left.size() == right.size()) {
+			for (int i = 0; i < left.size(); i++) {
+				Double l = left.get(i);
+				Double r = right.get(i);
+				double lValue = l.isNaN() ? 0 : l;
+				double rValue = r.isNaN() ? 0 : r;
+				list.add(Math.abs(lValue - rValue));
+			}
+		} else {
+
+			LOGGER.warn("Attempt to compare arrays of differing length! {} vs {}", left, right);
+		}
+		return list;
+	}
+
+	private double getDifferenceValue(List<Double> left, List<Double> right) {
+		double sum = 0.0;
+		List<Double> differenceArray = getDifferenceArray(left, right);
+		if (differenceArray.isEmpty()) {
+			sum = Double.NaN;
+		} else {
+			for (Double value : differenceArray) {
+				sum += value;
+			}
+		}
+		return sum;
 	}
 
 	public Set<String> getSymbols() {
 		return featureMap.keySet();
 	}
 
-	public void addSegment(String symbol, List<Float> features) {
+	public void addSegment(String symbol, List<Double> features) {
 		featureMap.put(symbol, features);
 	}
 
 	public void addSegment(String symbol) {
-		addSegment(symbol, new ArrayList<Float>());
+		addSegment(symbol, new ArrayList<Double>());
 	}
 
 	@Override
@@ -87,7 +205,8 @@ public class FeatureModel {
 
 	@Override
 	public boolean equals(Object obj) {
-		if (obj == null)                  return false;
+		if (obj == null)
+			return false;
 		if (obj.getClass() != getClass()) return false;
 
 		FeatureModel other = (FeatureModel) obj;
@@ -103,13 +222,13 @@ public class FeatureModel {
 		return computeScore(left, right);
 	}
 
-	public float computeScore(Segment l, Segment r) {
-		float score = 0;
+	public double computeScore(Segment l, Segment r) {
+		double score = 0;
 		int n = l.dimension();
 		for (int i = 0; i < n; i++) {
-			float a = l.getFeatureValue(i);
+			double a = l.getFeatureValue(i);
 			for (int j = 0; j < n; j++) {
-				float b = r.getFeatureValue(j);
+				double b = r.getFeatureValue(j);
 				score += Math.abs(a - b) * weightTable.get(i, j);
 			}
 		}
@@ -146,16 +265,16 @@ public class FeatureModel {
 		return new Segment(string, getValue(string));
 	}
 
-	public List<Float> getFeatureArray(String symbol) {
+	public List<Double> getFeatureArray(String symbol) {
 		return get(symbol).getFeatures();
 	}
 
-	public Map<String, List<Float>> getFeatureMap() {
+	public Map<String, List<Double>> getFeatureMap() {
 		return Collections.unmodifiableMap(featureMap);
 	}
 
-	public List<Float> getValue(String key) {
-		List<Float> value = new ArrayList<Float>();
+	public List<Double> getValue(String key) {
+		List<Double> value = new ArrayList<Double>();
 
 		if (featureMap.containsKey(key)) {
 			value = featureMap.get(key);
@@ -163,75 +282,102 @@ public class FeatureModel {
 		return value;
 	}
 
-	public Table<Float> getWeights() {
+	public Table<Double> getWeights() {
 		return weightTable;
 	}
 
-	public void put(String key, List<Float> values) {
+	public void put(String key, List<Double> values) {
 		featureMap.put(key, values);
 	}
 
-	private Map<String, List<Float>> readTable(List<String> lines) {
-		Map<String, List<Float>> listMap = new HashMap<String, List<Float>>();
+	private void readTable(List<String> lines) {
 
-		for (String line : lines) {
-			String[] row = line.split("\t");
-			String keys = row[0];
+		boolean hasDiacritics = false;
+
+		if (lines.get(0).startsWith("name")) {
+			String   line = lines.remove(0);
+			String[] row  = line.split("\t", -1);
 
 			row = ArrayUtils.remove(row, 0);
-			List<Float> features = new ArrayList<Float>();
-
-			for (String cell : row) {
-				float featureValue = new Float(cell);
-				features.add(featureValue);
+			if (row[0].equals("diacritic")) {
+				hasDiacritics = true;
+				row = ArrayUtils.remove(row, 0);
 			}
-
-			for (String key : keys.split(" ")) {
-				listMap.put(key, features);
+			for (int i = 0; i < row.length; i++) {
+				featureNames.put(row[i], i);
 			}
 		}
-		return listMap;
+
+		if (lines.get(0).startsWith("alias")) {
+			String   line = lines.remove(0);
+			String[] row  = line.split("\t", -1);
+
+			row = ArrayUtils.remove(row, 0);
+			if (hasDiacritics) {
+				// Remove the placeholder for "diacritics"
+				row = ArrayUtils.remove(row, 0);
+			}
+			for (int i = 0; i < row.length; i++) {
+				featureNames.put(row[i], i);
+			}
+		}
+
+		for (String line : lines) {
+
+			String[] row = line.split("\t", -1);
+			String keys = row[0].trim();
+			row = ArrayUtils.remove(row, 0);
+
+			// Read feature specification
+			List<Double> features = new ArrayList<Double>();
+			for (String cell : row) {
+
+				double featureValue;
+				if (cell.isEmpty()) {
+					featureValue = Double.NaN;
+				} else if (cell.equals("+")) {
+					featureValue = 1.0;
+				} else if (cell.equals("-")) {
+					featureValue = -1.0;
+				} else {
+					featureValue = Double.valueOf(cell);
+				}
+				features.add(featureValue);
+			}
+				// Create mapping
+			if (hasDiacritics) {
+				Double diacriticFlag = features.remove(0);
+				if (diacriticFlag <=  0.0) {
+					for (String key : keys.split(" ")) {
+						featureMap.put(key, features);
+					}
+				} else {
+					for (String key : keys.split(" ")) {
+						diacritics.put(key, features);
+					}
+				}
+			} else {
+				for (String key : keys.split(" ")) {
+					featureMap.put(key, features);
+				}
+			}
+		}
 	}
 
 	/**
 	 * @param lines
 	 */
-	private Table<Float> readWeights(List<String> lines) {
+	private Table<Double> readWeights(List<String> lines) {
 		int numberOfWeights = lines.get(0).split("\t").length;
-		Table<Float> table = new Table<Float>(0f, numberOfWeights, numberOfWeights);
+		Table<Double> table = new Table<Double>(0.0, numberOfWeights, numberOfWeights);
 
 		for (int i = 0; i < lines.size(); i++) {
 			String[] row = lines.get(i).split("\t");
 			for (int j = 0; j < row.length; j++) {
-				Float value = new Float(row[j]);
+				Double value = Double.valueOf(row[j]);
 				table.set(value, i, j);
 			}
 		}
 		return table;
-	}
-
-	private Segment compile(String w) {
-		String head = "";
-		int l = w.length();
-		int i = l;
-		while (i > 0) {                             // Loop back-to-front and find the head
-			String slice = w.substring(0, i);
-			if (containsKey(slice)) {
-				head = slice;
-				break;
-			} else {
-				i--;
-			}
-		}
-		Segment segment = get(head);                // Initialize the segment
-		for (int j = l; j > i; j--) {               // Loop over the rest to put the diacritics.
-			String slice = w.substring(i, j);
-			if (containsKey(slice)) {
-				List<Float> featureArray = getFeatureArray(slice);
-				segment = segment.appendDiacritic(slice, featureArray);
-				i = j - 1;
-			}
-		}
-		return segment;
 	}
 }
